<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        android:gravity="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_personal_data"
        android:onClick="search"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/listBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_data"
        android:onClick="list"/>

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="profile"
        android:text="@string/my_profile"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logout"
        android:text="@string/logout" />

</LinearLayout>
