<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/person_avatar"
        android:layout_width="215dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_avatar" />

    <TextView
        android:id="@+id/nameQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/nil"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toTopOf="@+id/nameText"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/idText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/id_number"
        app:layout_constraintEnd_toEndOf="@+id/nameText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/idQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintBottom_toBottomOf="@+id/idText"
        app:layout_constraintEnd_toEndOf="@+id/nameQuery"
        app:layout_constraintStart_toStartOf="@+id/nameQuery"
        app:layout_constraintTop_toTopOf="@+id/idText" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/birthDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderText"
        app:layout_constraintVertical_bias="0.519" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="@+id/idText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <TextView
        android:id="@+id/genderQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintBottom_toBottomOf="@+id/genderText"
        app:layout_constraintEnd_toEndOf="@+id/idQuery"
        app:layout_constraintStart_toStartOf="@+id/idQuery"
        app:layout_constraintTop_toTopOf="@+id/genderText" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDateText"
        app:layout_constraintVertical_bias="0.11" />

    <TextView
        android:id="@+id/birthDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/birth_date_and_age"
        app:layout_constraintEnd_toEndOf="@+id/genderText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderText" />

    <TextView
        android:id="@+id/birthDateQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nil"
        app:layout_constraintBottom_toBottomOf="@+id/birthDateText"
        app:layout_constraintEnd_toEndOf="@+id/genderQuery"
        app:layout_constraintStart_toStartOf="@+id/genderQuery"
        app:layout_constraintTop_toTopOf="@+id/birthDateText" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/genderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idText"
        app:layout_constraintVertical_bias="0.509" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkUserPermission"
        android:text="@string/set_as_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>